[package]
name = "pineapple-pen"
version = "0.1.0"
authors = ["Leonardo F. <leonardofe@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.7.1"
